Add application icon placeholder
Class Settings documented.

--- a/utility_boilerplate_qt.qrc
+++ b/utility_boilerplate_qt.qrc
@@ -1,3 +1,5 @@
 <RCC>
-    <qresource prefix="/app"/>
+    <qresource prefix="/app">
+        <file alias="icon">res/images/icon.ico</file>
+    </qresource>
 </RCC>
