--- a/utility_boilerplate_qt5/utility_boilerplate_qt5.qrc
+++ b/utility_boilerplate_qt5/utility_boilerplate_qt5.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/utility_boilerplate_qt5">
-        <file alias="ic_new">images/new.png</file>
-        <file alias="ic_open">images/open.png</file>
-        <file alias="ic_save">images/save.png</file>
-        <file alias="ic_copy">images/copy.png</file>
-        <file alias="ic_cut">images/cut.png</file>
-        <file alias="ic_paste">images/paste.png</file>
+        <file alias="ic_new">res/images/new.png</file>
+        <file alias="ic_open">res/images/open.png</file>
+        <file alias="ic_save">res/images/save.png</file>
+        <file alias="ic_copy">res/images/copy.png</file>
+        <file alias="ic_cut">res/images/cut.png</file>
+        <file alias="ic_paste">res/images/paste.png</file>
     </qresource>
 </RCC>
